# pseudo2py

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pseudo2py/: __init__.py  agent.py  cli.py  config.py  extract.py  prompts.py  search.py  validate.py
tests/: test_agent.py  test_config.py  test_extract.py  test_search.py  test_validate.py
